Adds a test for ICT-3870
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@235519 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/nctest/ws/test/Makefile
+++ b/LGPL/CommonSoftware/nctest/ws/test/Makefile
@@ -113,7 +113,7 @@ PANELS_L =
 # 
 # IDL Files and flags
 # 
-IDL_FILES_L = nctestSpr2005067 separateTypedef testStructs DataCaptureExample
+IDL_FILES_L = nctestSpr2005067 separateTypedef testStructs DataCaptureExample ICT-3870
 IDL_TAO_FLAGS =
 USER_IDL =
 nctestSpr2005067Stubs_LIBS = baciStubs
