ICT-4878 moved swig
git-svn-id: https://svn.alma.cl/p2/branches/ALMA-RELEASE-B/ACS@239571 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/Makefile
+++ b/LGPL/Tools/Makefile
@@ -48,7 +48,7 @@ endef
 # because it is already built in the prepare phase.
 #
 
-MODULES_TOOLS = emacs tat expat loki extjars antlr hibernate extpy cppunit getopt astyle swig xercesc xercesj castor xsddoc extidl vtd-xml oAW shunit2 log4cpp scxml_apache
+MODULES_TOOLS = emacs tat expat loki extjars antlr hibernate extpy cppunit getopt astyle xercesc xercesj castor xsddoc extidl vtd-xml oAW shunit2 log4cpp scxml_apache
 
 
 
