Added VXWORK_RTOS in LGPL/Tools/Makefile ICT-8298
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@240069 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/Makefile
+++ b/LGPL/Tools/Makefile
@@ -51,6 +51,7 @@ endef
 MODULES_TOOLS = emacs tat expat loki extjars antlr hibernate extpy cppunit getopt astyle xercesc xercesj castor xsddoc extidl vtd-xml oAW shunit2 log4cpp scxml_apache
 
 
+VXWORKS_RTOS = $(shell if [ $(WIND_BASE) ] ; then echo "YES"; else echo "NO"; fi)
 
 SUBSYSTEM = "Tools"
 
