Reverted makfile with problems
git-svn-id: https://svn.alma.cl/p2/branches/COMMON-FEB2017-TEMP/ACS@240759 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/nsStatisticsService/src/Makefile
+++ b/LGPL/CommonSoftware/nsStatisticsService/src/Makefile
@@ -112,30 +112,20 @@ CDB_SCHEMAS =
 # 
 # IDL Files and flags
 # 
-IDL_FILES := NotifyServiceStatisticsComponent 
+IDL_FILES =
 TAO_IDLFLAGS =
 USER_IDL =
-
-NotifyServiceStatisticsComponentStubs_LIBS=acscomponentStubs
-
 #
 # Jarfiles and their directories
 #
-
-JARFILES: = nsStatisticsService NotifyServiceStatisticsComponentImpl 
-
-nsStatisticsService_DIRS := alma/acs/nsstatistics \
-                         alma/acs/service
-
-NotifyServiceStatisticsComponentImpl_DIRS := alma/acs/statistics
-NotifyServiceStatisticsComponent_JLIBS := NotifyServiceStatisticsComponent
-
+JARFILES=nsStatisticsService 
+nsStatisticsService_DIRS=alma/acs
 jjj_EXTRAS=
 # For expressing dependencies between jarfiles (parallel builds)
 jjj_JLIBS= 
 #
 # java sources in Jarfile on/off
-DEBUG=on
+DEBUG= 
 #
 # ACS XmlIdl generation on/off
 #
