ICT-3604: defined nsStatisticsComponent dependency in makefile for parallel building
git-svn-id: https://svn.alma.cl/p2/branches/COMMON-APR2017-TEMP/ACS@242424 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/nsStatisticsService/src/Makefile
+++ b/LGPL/CommonSoftware/nsStatisticsService/src/Makefile
@@ -127,10 +127,11 @@ nsStatisticsService_DIRS=alma/acs/nsstatistics \
                          alma/acs/service
                          
 NotifyServiceStatisticsComponentImpl_DIRS=alma/acs/statistics
+NotifyServiceStatisticsComponentImpl_JLIBS=nsStatisticsService
 
 jjj_EXTRAS=
 # For expressing dependencies between jarfiles (parallel builds)
-jjj_JLIBS= 
+jjj_JLIBS=
 #
 # java sources in Jarfile on/off
 DEBUG=on
