ICT-9261: merged to COMMON-APR2017
git-svn-id: https://svn.alma.cl/p2/branches/COMMON-APR2017-TEMP/ACS@243034 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsnc/ws/test/Makefile
+++ b/LGPL/CommonSoftware/acsnc/ws/test/Makefile
@@ -46,7 +46,7 @@ PY_SCRIPTS_L =	acsncTestConSup acsncTestSimpleComponent acsncTestSupReconn acsnc
 # Includes (.h) files (public and local)
 # ---------------------------------
 INCLUDES        = 
-INCLUDES_L      = acsncConsumerCompImpl.h acsncSupplierCompImpl.h acsncConCompImpl.h acsncSupCompImpl.h
+INCLUDES_L      = acsncConsumerCompImpl.h acsncSupplierCompImpl.h acsncConCompImpl.h acsncSupCompImpl.h  
 
 # Libraries (public and local)
 # ----------------------------
@@ -55,7 +55,7 @@ LIBRARIES       = acsncConsumerCompImpl acsncSupplierCompImpl acsncRTSupplierCom
 		testCDBProps  \
 		acsncConsumerILCompImpl acsncSupplierILCompImpl \
 		acsncConsumerNamedChCompImpl acsncSupplierNamedChCompImpl \
-        acsncHelperTest acsncConCompImpl acsncSupCompImpl 
+                acsncHelperTest acsncConCompImpl acsncSupCompImpl acsncSupplierReliabilityCompImpl 
 LIBRARIES_L     = 
 
 acsncSupCompImpl_OBJECTS = acsncSupCompImpl
@@ -91,6 +91,9 @@ acsncSupplierILCompImpl_LIBS    = EventComponentStubs acsnc acscomponent
 
 acsncSupplierNamedChCompImpl_OBJECTS = acsncSupplierNamedChCompImpl
 acsncSupplierNamedChCompImpl_LIBS    = EventComponentStubs acsnc acscomponent
+
+acsncSupplierReliabilityCompImpl_OBJECTS = acsncSupplierReliabilityCompImpl
+acsncSupplierReliabilityCompImpl_LIBS    = EventComponentStubs acsnc acscomponent
 
 acsncRTSupplierCompImpl_OBJECTS = acsncRTSupplierCompImpl
 acsncRTSupplierCompImpl_LIBS    = EventComponentStubs acsnc acscomponent
