moved LRU.xsd from ICD/SharedCode/TMCDB/Utils/src to ACS/LGPL/CommonSoftware/cdb_rdb/config/CDB/schemas/ an modified Makefiles accordingly
git-svn-id: https://svn.alma.cl/p2/branches/ICT-9637-TEMP/ACS@243349 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdb_rdb/src/Makefile
+++ b/LGPL/CommonSoftware/cdb_rdb/src/Makefile
@@ -85,6 +85,11 @@ endif
 #
 # TARGETS
 # -------
+gen:
+	acsStartJava -endorsed org.exolab.castor.builder.SourceGenerator \
+            -i ../config/CDB/schemas/LRU.xsd  -package alma.tmcdb.generated.lrutype
+
+
 all:	.done_generating_sql ../lib/TMCDBswconfigStrategy.jar .done_generating_classes ../lib/$(POJOS_JAR) do_all
 	@echo " . . . 'all' done" 
 
