changed lru package to alma.acs.tmcdb.generated
git-svn-id: https://svn.alma.cl/p2/branches/ICT-9637-TEMP/ACS@243350 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdb_rdb/src/Makefile
+++ b/LGPL/CommonSoftware/cdb_rdb/src/Makefile
@@ -87,7 +87,7 @@ endif
 # -------
 gen:
 	acsStartJava -endorsed org.exolab.castor.builder.SourceGenerator \
-            -i ../config/CDB/schemas/LRU.xsd  -package alma.tmcdb.generated.lrutype
+            -i ../config/CDB/schemas/LRU.xsd  -package alma.acs.tmcdb.generated.lrutype
 
 
 all:	.done_generating_sql ../lib/TMCDBswconfigStrategy.jar .done_generating_classes ../lib/$(POJOS_JAR) do_all
