make clean fixed
git-svn-id: https://svn.alma.cl/p2/branches/ICT-9637-TEMP/ACS@243354 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdb_rdb/src/Makefile
+++ b/LGPL/CommonSoftware/cdb_rdb/src/Makefile
@@ -99,6 +99,7 @@ clean : clean_all
 	@echo "== Deleting generated code"
 	@rm -rf ../config/TMCDB_swconfigcore
 	@rm -rf ../config/TMCDB_swconfigext
+	@rm -rf ../alma/acs/tmcdb/generated
 	@rm -rf tmcdb
 	@rm -rf gen
 	@rm -f .done_generating_sql
