--- a/LGPL/CommonSoftware/cdb_rdb/.classpath
+++ b/LGPL/CommonSoftware/cdb_rdb/.classpath
@@ -1,42 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="/home/almamgr/INTROOT/lib/cdbrdb-pojos.jar"/>
-	<classpathentry kind="lib" path="/home/almamgr/INTROOT/lib/cdb_rdb.jar"/>
-	<classpathentry kind="var" path="INTROOT"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="acs.INTROOT_CONTAINER/INTROOT/jar,zip"/>
+	<classpathentry kind="con" path="acs.ACSROOT_CONTAINER/ACS-current/jar,zip"/>
 	<classpathentry excluding=".cvsignore|.done_generating_classes|.done_generating_sql|Makefile|gen/" kind="src" path="src"/>
 	<classpathentry excluding=".cvsignore|CDB/|Makefile|ref/|tmcdb/" kind="src" path="test"/>
-	<classpathentry kind="var" path="ACSROOT/lib/cdbErrType.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/cdbjDAL.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/acserrj.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/acserr.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/hsqldb.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/hibernate-core-4.3.11.Final.jar" sourcepath="/ACSROOT"/>
-	<classpathentry kind="var" path="ACSROOT/lib/acsalarmSchemaBindings.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/slf4j-api-1.7.6.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/ACSError.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeOK.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/maciSchemaBindings.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/javassist-3.18.1-GA.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/jta-1.1.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/acscomponent.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/repeatGuard.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/alarm_cdb_rdb_plugin.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/lasercore.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/jcont.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/xmlunit-1.3.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/jdom.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/cdbDAL.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/CDB.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/slf4j-acs.jar"/>
