Added AcsTmcdbUtils jard dependencies
git-svn-id: https://svn.alma.cl/p2/branches/COMMON-JUN2017-TEMP/ACS@245338 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdb_rdb/src/Makefile
+++ b/LGPL/CommonSoftware/cdb_rdb/src/Makefile
@@ -56,10 +56,10 @@ cdb_rdb_EXTRAS=alma/TMCDB/maci/hibernate-mappings-maci.hbm.xml \
                alma/TMCDB/baci/hibernate-mappings-baci.hbm.xml \
                acsOnly-cdb_rdb-hibernate.cfg.xml
 
-AcsTmcdbUtils_DIRS=alma/acs/tmcdb/generated/lrutype alma/acs/tmcdb/utils
+AcsTmcdbUtils_DIRS := alma/acs/tmcdb/generated/lrutype alma/acs/tmcdb/utils
 
-cdb_rdb_JLIBS=TMCDBswconfigStrategy cdbrdb-pojos 
-
+cdb_rdb_JLIBS := TMCDBswconfigStrategy cdbrdb-pojos 
+AcsTmcdbUtils_JLIBS := cdb_rdb
 
 #
 # java sources in Jarfile on/off
